--- a/config/profile_default.yml.example
+++ b/config/profile_default.yml.example
@@ -1,11 +1,11 @@
-development:
+default: &default
   :layout:
     :layout:
       :sample: 1
       :reaction: 2
       :wellplate: 3
       :screen: 4
-      :research_plan: 5
+      :research_plan: 
       :cell_line: -1000
     :layout_detail_research_plan:
       :research_plan:
@@ -27,6 +27,8 @@ development:
         4
       :results:
         5
+      :history:
+        6
     :layout_detail_reaction:
       :scheme:
         1
@@ -40,6 +42,8 @@ development:
         5
       :variations:
         6
+      :history:
+        7
     :layout_detail_wellplate:
       :properties:
         1
@@ -54,117 +58,12 @@ development:
         1
       :analyses:
         2
+development:
+  <<: *default
+
 
 production:
-  :layout:
-    :layout:
-      :sample: 1
-      :reaction: 2
-      :wellplate: 3
-      :screen: 4
-      :research_plan: 5
-      :cell_line: -1000
-    :layout_detail_research_plan:
-      :research_plan:
-        1
-      :analyses:
-        2
-      :references:
-        3
-      :attachments:
-        4
-    :layout_detail_sample:
-      :properties:
-        1
-      :analyses:
-        2
-      :qc_curation:
-        3
-      :references:
-        4
-      :results:
-        5
-    :layout_detail_reaction:
-      :scheme:
-        1
-      :properties:
-        2
-      :analyses:
-        3
-      :references:
-        4
-      :green_chemistry:
-        5
-      :variations:
-        6
-    :layout_detail_wellplate:
-      :properties:
-        1
-      :analyses:
-        2
-      :designer:
-        3
-      :list:
-        4
-    :layout_detail_screen:
-      :properties:
-        1
-      :analyses:
-        2
+  <<: *default
 
 test:
-  :layout:
-    :layout:
-      :sample: 1
-      :reaction: 2
-      :wellplate: 3
-      :screen: 4
-      :research_plan: 5
-      :cell_line: -1000
-    :layout_detail_research_plan:
-      :research_plan:
-        1
-      :analyses:
-        2
-      :references:
-        3
-      :attachments:
-        4
-    :layout_detail_sample:
-      :properties:
-        1
-      :analyses:
-        2
-      :qc_curation:
-        3
-      :references:
-        4
-      :results:
-        5
-    :layout_detail_reaction:
-      :scheme:
-        1
-      :properties:
-        2
-      :analyses:
-        3
-      :references:
-        4
-      :green_chemistry:
-        5
-      :variations:
-        6
-    :layout_detail_wellplate:
-      :properties:
-        1
-      :analyses:
-        2
-      :designer:
-        3
-      :list:
-        4
-    :layout_detail_screen:
-      :properties:
-        1
-      :analyses:
-        2
+  <<: *default
