--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-react": "7.10.4",
     "@citation-js/plugin-isbn": "0.3.0",
     "@complat/chem-spectra-client": "1.0.0-rc16",
+    "@complat/chemotion-reaction-svg-composer": "^1.0.0",
     "@complat/react-spectra-editor": "1.0.0-rc16",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
