--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "es6-promise-debounce": "^1.0.1",
     "factory-bot": "^6.3.1",
     "html2pdf.js": "^0.10.1",
+    "http-proxy-middleware": "^3.0.0",
     "humps": "^2.0.1",
     "immutability-helper": "^2.8.1",
     "immutable": "^4.0.0-rc.12",
@@ -158,5 +159,6 @@
       "@rails/webpacker/package/babel/preset.js",
       "@babel/preset-react"
     ]
-  }
+  },
+  "proxy": "http://localhost:8002"
 }
