--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,6 +21,17 @@ services:
     volumes:
       - 'database:/var/lib/postgresql/data'
 
+  indigo_service:
+    hostname: indigo_service
+    image: 6a91eaf63879 # epmlsop/indigo_service
+    environment:
+      - PYTHONPATH=${INDIGO_SERVICE_PYTHONPATH:-/srv/indigo-python}
+      - INDIGO_UWSGI_RUN_PARAMETERS=--plugin python3 --py-autoreload=1
+      - PYTHONDONTWRITEBYTECODE=1
+    ports:
+      - 8002:80
+    command: supervisord -n
+
   app:
     build:
       context: '.'
