--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,7 +16,6 @@ services:
       dockerfile: 'Dockerfile.RDKit'
     environment:
       - 'POSTGRES_HOST_AUTH_METHOD=trust'
-      - 'PG_CARTRIDGE_INSTALLED=true'
     expose: # expose port to app container
       - '5432'
     ports: # expose port to host machine in case we want to use external db gui tools
@@ -35,7 +34,7 @@ services:
       interval: 30s
       timeout: 10s
     environment:
-      - 'PG_CARTRIDGE_INSTALLED=true'
+      - 'PG_CARTRIDGE=RDKit'
       - 'WEBPACKER_DEV_SERVER_HOST=webpacker'
       - 'WEBPACKER_DEV_SERVER_PORT=3035'
       - 'NODE_MODULES_PATH=/home/chemotion-dev/node_modules/' # required for the asset pipeline to find the node modules
